test/should_fail/inh_model_007.gm
model inh_model_007;

edge class A extends B;
edge class B extends A;
